feat(backend): create dependencies to integration tests and create AuthControllerTest